// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Content should render with isShowNavContent disable 1`] = `
<NavContent
  isShowNavContent={false}
>
  <NavContent__Container
    className="second-nav"
    isShowNavContent={false}
  >
    <StyledComponent
      className="second-nav"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "NavContent__Container-sc-1bgb07m-0",
            "isStatic": false,
            "lastClassName": "UYfuG",
            "rules": Array [
              "position:relative;min-height:",
              [Function],
              ";background-color:",
              [Function],
              ";margin-top:",
              [Function],
              ";box-shadow:",
              [Function],
              ";transition:all 0.5s;@media screen and (max-width:800px){margin-top:-100%;}",
            ],
          },
          "displayName": "NavContent__Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "NavContent__Container-sc-1bgb07m-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isShowNavContent={false}
    >
      <div
        className="NavContent__Container-sc-1bgb07m-0 UYfuG second-nav"
      >
        <div
          className="container"
        >
          <NavLogo>
            <NavLogo__Logo>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "NavLogo__Logo-sc-1822jsu-0",
                      "isStatic": false,
                      "lastClassName": "cMqCKY",
                      "rules": Array [
                        "display:block;position:absolute;top:0;left:20px;width:",
                        [Function],
                        ";color:",
                        [Function],
                        ";font-size:",
                        [Function],
                        ";line-height:",
                        [Function],
                        ";font-family:",
                        [Function],
                        ";letter-spacing:-5px;font-weight:bold;text-align:center;background-color:",
                        [Function],
                        ";border:none;@media screen and (max-width:960px){display:none;}&::after{content:'';position:absolute;bottom:-29px;left:0;z-index:250;border-top:30px solid ",
                        [Function],
                        ";border-left:40px solid transparent;border-right:40px solid transparent;}",
                      ],
                    },
                    "displayName": "NavLogo__Logo",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "NavLogo__Logo-sc-1822jsu-0",
                    "target": "a",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <a
                  className="NavLogo__Logo-sc-1822jsu-0 cMqCKY"
                >
                  <NavLogo__LogoText>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavLogo__LogoText-sc-1822jsu-1",
                            "isStatic": false,
                            "lastClassName": "cUhXTg",
                            "rules": Array [
                              "position:relative;display:block;width:100%;height:100%;&::after{content:'';position:absolute;bottom:-15px;right:-2px;width:50px;height:5px;background-color:transparent;box-shadow:",
                              [Function],
                              ";transform:rotate(-37deg);}&::before{content:'';position:absolute;bottom:-15px;left:-2px;width:50px;height:5px;background-color:transparent;box-shadow:",
                              [Function],
                              ";transform:rotate(37deg);}",
                            ],
                          },
                          "displayName": "NavLogo__LogoText",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavLogo__LogoText-sc-1822jsu-1",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <span
                        className="NavLogo__LogoText-sc-1822jsu-1 cUhXTg"
                      >
                        JD
                      </span>
                    </StyledComponent>
                  </NavLogo__LogoText>
                </a>
              </StyledComponent>
            </NavLogo__Logo>
          </NavLogo>
          <NavContent__NavMenu
            className="menu"
          >
            <StyledComponent
              className="menu"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "NavContent__NavMenu-sc-1bgb07m-1",
                    "isStatic": false,
                    "lastClassName": "dxzTZf",
                    "rules": Array [
                      "text-align:right;@media screen and (max-width:800px){text-align:center;}",
                    ],
                  },
                  "displayName": "NavContent__NavMenu",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "NavContent__NavMenu-sc-1bgb07m-1",
                  "target": "nav",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <nav
                className="NavContent__NavMenu-sc-1bgb07m-1 dxzTZf menu"
              >
                <ul>
                  <NavContent__NavLi
                    key="Home"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={true}
                          page="Home"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__SelectedContainer>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__SelectedContainer-a312fv-1",
                                    "isStatic": false,
                                    "lastClassName": "bHJkXU",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                      "color:",
                                      [Function],
                                      ";border:none;",
                                    ],
                                  },
                                  "displayName": "NavItem__SelectedContainer",
                                  "foldedComponentIds": Array [
                                    "NavItem__Container-a312fv-0",
                                  ],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__SelectedContainer-a312fv-1",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 NavItem__SelectedContainer-a312fv-1 bHJkXU"
                              >
                                Home
                              </a>
                            </StyledComponent>
                          </NavItem__SelectedContainer>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="About"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="About"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#About"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#About"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#About"
                                onClick={[Function]}
                              >
                                About
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Experiences"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Experiences"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Experiences"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Experiences"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Experiences"
                                onClick={[Function]}
                              >
                                Experiences
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Certifications"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Certifications"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Certifications"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Certifications"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Certifications"
                                onClick={[Function]}
                              >
                                Certifications
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Projects"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Projects"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Projects"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Projects"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Projects"
                                onClick={[Function]}
                              >
                                Projects
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Contacts"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Contacts"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Contacts"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Contacts"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Contacts"
                                onClick={[Function]}
                              >
                                Contacts
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                </ul>
              </nav>
            </StyledComponent>
          </NavContent__NavMenu>
        </div>
      </div>
    </StyledComponent>
  </NavContent__Container>
</NavContent>
`;

exports[`Nav Content should render with isShowNavContent enable 1`] = `
<NavContent
  isShowNavContent={true}
>
  <NavContent__Container
    className="second-nav"
    isShowNavContent={true}
  >
    <StyledComponent
      className="second-nav"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "NavContent__Container-sc-1bgb07m-0",
            "isStatic": false,
            "lastClassName": "hrdLbJ",
            "rules": Array [
              "position:relative;min-height:",
              [Function],
              ";background-color:",
              [Function],
              ";margin-top:",
              [Function],
              ";box-shadow:",
              [Function],
              ";transition:all 0.5s;@media screen and (max-width:800px){margin-top:-100%;}",
            ],
          },
          "displayName": "NavContent__Container",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "NavContent__Container-sc-1bgb07m-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isShowNavContent={true}
    >
      <div
        className="NavContent__Container-sc-1bgb07m-0 hrdLbJ second-nav"
      >
        <div
          className="container"
        >
          <NavLogo>
            <NavLogo__Logo>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "NavLogo__Logo-sc-1822jsu-0",
                      "isStatic": false,
                      "lastClassName": "cMqCKY",
                      "rules": Array [
                        "display:block;position:absolute;top:0;left:20px;width:",
                        [Function],
                        ";color:",
                        [Function],
                        ";font-size:",
                        [Function],
                        ";line-height:",
                        [Function],
                        ";font-family:",
                        [Function],
                        ";letter-spacing:-5px;font-weight:bold;text-align:center;background-color:",
                        [Function],
                        ";border:none;@media screen and (max-width:960px){display:none;}&::after{content:'';position:absolute;bottom:-29px;left:0;z-index:250;border-top:30px solid ",
                        [Function],
                        ";border-left:40px solid transparent;border-right:40px solid transparent;}",
                      ],
                    },
                    "displayName": "NavLogo__Logo",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "NavLogo__Logo-sc-1822jsu-0",
                    "target": "a",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <a
                  className="NavLogo__Logo-sc-1822jsu-0 cMqCKY"
                >
                  <NavLogo__LogoText>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavLogo__LogoText-sc-1822jsu-1",
                            "isStatic": false,
                            "lastClassName": "cUhXTg",
                            "rules": Array [
                              "position:relative;display:block;width:100%;height:100%;&::after{content:'';position:absolute;bottom:-15px;right:-2px;width:50px;height:5px;background-color:transparent;box-shadow:",
                              [Function],
                              ";transform:rotate(-37deg);}&::before{content:'';position:absolute;bottom:-15px;left:-2px;width:50px;height:5px;background-color:transparent;box-shadow:",
                              [Function],
                              ";transform:rotate(37deg);}",
                            ],
                          },
                          "displayName": "NavLogo__LogoText",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavLogo__LogoText-sc-1822jsu-1",
                          "target": "span",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <span
                        className="NavLogo__LogoText-sc-1822jsu-1 cUhXTg"
                      >
                        JD
                      </span>
                    </StyledComponent>
                  </NavLogo__LogoText>
                </a>
              </StyledComponent>
            </NavLogo__Logo>
          </NavLogo>
          <NavContent__NavMenu
            className="menu"
          >
            <StyledComponent
              className="menu"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "NavContent__NavMenu-sc-1bgb07m-1",
                    "isStatic": false,
                    "lastClassName": "dxzTZf",
                    "rules": Array [
                      "text-align:right;@media screen and (max-width:800px){text-align:center;}",
                    ],
                  },
                  "displayName": "NavContent__NavMenu",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "NavContent__NavMenu-sc-1bgb07m-1",
                  "target": "nav",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <nav
                className="NavContent__NavMenu-sc-1bgb07m-1 dxzTZf menu"
              >
                <ul>
                  <NavContent__NavLi
                    key="Home"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={true}
                          page="Home"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__SelectedContainer>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__SelectedContainer-a312fv-1",
                                    "isStatic": false,
                                    "lastClassName": "bHJkXU",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                      "color:",
                                      [Function],
                                      ";border:none;",
                                    ],
                                  },
                                  "displayName": "NavItem__SelectedContainer",
                                  "foldedComponentIds": Array [
                                    "NavItem__Container-a312fv-0",
                                  ],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__SelectedContainer-a312fv-1",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 NavItem__SelectedContainer-a312fv-1 bHJkXU"
                              >
                                Home
                              </a>
                            </StyledComponent>
                          </NavItem__SelectedContainer>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="About"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="About"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#About"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#About"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#About"
                                onClick={[Function]}
                              >
                                About
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Experiences"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Experiences"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Experiences"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Experiences"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Experiences"
                                onClick={[Function]}
                              >
                                Experiences
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Certifications"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Certifications"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Certifications"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Certifications"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Certifications"
                                onClick={[Function]}
                              >
                                Certifications
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Projects"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Projects"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Projects"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Projects"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Projects"
                                onClick={[Function]}
                              >
                                Projects
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                  <NavContent__NavLi
                    key="Contacts"
                  >
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "NavContent__NavLi-sc-1bgb07m-2",
                            "isStatic": false,
                            "lastClassName": "kzVeLC",
                            "rules": Array [
                              "display:inline-block;margin-left:18px;@media screen and (max-width:800px){margin:0 9px;display:block;border-bottom:1px dashed ",
                              [Function],
                              ";}",
                            ],
                          },
                          "displayName": "NavContent__NavLi",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "NavContent__NavLi-sc-1bgb07m-2",
                          "target": "li",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                    >
                      <li
                        className="NavContent__NavLi-sc-1bgb07m-2 kzVeLC"
                      >
                        <NavItem
                          isSelected={false}
                          page="Contacts"
                          setSelectedPage={[Function]}
                        >
                          <NavItem__Container
                            data-test-id="nav-link"
                            href="#Contacts"
                            onClick={[Function]}
                          >
                            <StyledComponent
                              data-test-id="nav-link"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavItem__Container-a312fv-0",
                                    "isStatic": false,
                                    "lastClassName": "jwNLvm",
                                    "rules": Array [
                                      "line-height:",
                                      [Function],
                                      ";font-size:",
                                      [Function],
                                      ";transition:color 0.5s;&:hover{color:",
                                      [Function],
                                      ";border:none;}@media screen and (max-width:800px){font-size:",
                                      [Function],
                                      ";line-height:2;border-bottom:none;}",
                                    ],
                                  },
                                  "displayName": "NavItem__Container",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavItem__Container-a312fv-0",
                                  "target": "a",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              href="#Contacts"
                              onClick={[Function]}
                            >
                              <a
                                className="NavItem__Container-a312fv-0 jwNLvm"
                                data-test-id="nav-link"
                                href="#Contacts"
                                onClick={[Function]}
                              >
                                Contacts
                              </a>
                            </StyledComponent>
                          </NavItem__Container>
                        </NavItem>
                      </li>
                    </StyledComponent>
                  </NavContent__NavLi>
                </ul>
              </nav>
            </StyledComponent>
          </NavContent__NavMenu>
        </div>
      </div>
    </StyledComponent>
  </NavContent__Container>
</NavContent>
`;

exports[`Nav Content should render without throwing an error 1`] = `
<NavContent__Container
  className="second-nav"
>
  <div
    className="container"
  >
    <NavLogo />
    <NavContent__NavMenu
      className="menu"
    >
      <ul>
        <NavContent__NavLi
          key="Home"
        >
          <NavItem
            isSelected={true}
            page="Home"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
        <NavContent__NavLi
          key="About"
        >
          <NavItem
            isSelected={false}
            page="About"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
        <NavContent__NavLi
          key="Experiences"
        >
          <NavItem
            isSelected={false}
            page="Experiences"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
        <NavContent__NavLi
          key="Certifications"
        >
          <NavItem
            isSelected={false}
            page="Certifications"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
        <NavContent__NavLi
          key="Projects"
        >
          <NavItem
            isSelected={false}
            page="Projects"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
        <NavContent__NavLi
          key="Contacts"
        >
          <NavItem
            isSelected={false}
            page="Contacts"
            setSelectedPage={[Function]}
          />
        </NavContent__NavLi>
      </ul>
    </NavContent__NavMenu>
  </div>
</NavContent__Container>
`;
